Completed the entire frontend with api integration and ui design